--- a/resources/views/app/packages/view_update.edge
+++ b/resources/views/app/packages/view_update.edge
@@ -9,10 +9,10 @@
         <div class="card support-pane-card">
             <div class="card-body">
                 <div class="d-flex justify-content-between align-items-center mb-3">
-                    <h4 class="card-title mb-0">Package view update</h4>
-                    <div class="btn-toolbar mb-0 d-none d-sm-block" 
+                    <h4 class="card-title mb-0">{{project.fullName}}</h4>
+                    <div class="btn-toolbar mb-0 d-none d-sm-block"  
                         role="toolbar" aria-label="Toolbar with button groups">
-                        <a href="{{ route('app.packages.index') }}" class="btn btn-primary btn-xs">
+                        <a href="{{ route('app.dashboard') }}" class="btn btn-primary btn-xs">
                             <i class="mdi mdi-file"></i> Back
                         </a>
                     </div>
