--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -33,3 +33,19 @@
   margin-bottom: 20px;
   border-radius: 5px;
 }
+
+.notification-count{
+  position: absolute;
+  top: 4px;
+  right: 1px;
+  width: 15px;
+  height: 15px;
+  background: red;
+  color: white;
+  border-radius: 50%;
+  font-size: 10px;
+  font-weight: bold;
+  line-height: 1.5;
+  text-align: center;
+  z-index: 3;
+}
