--- a/resources/views/app/dashboard.edge
+++ b/resources/views/app/dashboard.edge
@@ -11,7 +11,7 @@
                   <div class="nk-block-head-sub"><span>Welcome!</span></div>
                   <div class="align-center flex-wrap pb-2 gx-4 gy-3">
                       <div>
-                      <h2 class="nk-block-title fw-normal">{{ auth.user.getFullName() }}</h2>
+                        <h2 class="nk-block-title fw-normal">{{ auth.user.getFullName() }}</h2>
                       </div>
                     <div><a href="{{ route('app.packages.index') }}" class="btn btn-white btn-light">My Projects
                               <em class="icon ni ni-arrow-long-right ml-2"></em></a></div>
@@ -149,13 +149,16 @@
                                                     class="item-value"><b>{{ project.duration }}</b> years</span></li>
                                         <li><span class="item-label"><i class="fa fa-building-o" aria-hidden="true"></i> Price</span><span
                                                 class="item-value">{{{ moneyFormat(project.capital) }}} <span class="font-{{ project.active === 1 ? 'selling' : 'sold' }}">per units</span></li>
-                                        <li class="total"><span class="item-label">Annual Return</span><span
-                                                class="item-value">{{{ moneyFormat(project.annum_return) }}}</span></li>
+                                        <li class="total">
+                                            <span class="item-label">Annual Return</span>
+                                            <span class="item-value">{{{ moneyFormat(project.annum_return) }}}</span>
+                                        </li>
                                     </ul>
                                 </div>
                                 <div class="nk-iv-wg2-cta">
                                     <a href="{{ project.active === 0 ? '#' : project.sold_status == 2?route('app.packages.view.update', {id:project.id}): route('app.packages.choose') }}"  
-                                        class="btn btn-{{ project.active === 0 ? 'warning' : project.sold_status == 2?'danger':'primary' }} btn-lg btn-block">  
+                                        class="btn btn-{{ project.active === 0 ? 'info' : project.sold_status == 2?'dange':project.SoldStatusObj.class }} btn-lg btn-block"
+                                        style="{{project.sold_status == 2?'background:#e85347;color:#fff;border-color:#e85347':''}}">  
                                         {{ project.active === 0 ? 'Coming Soon' : project.sold_status == 2?'View Update':'Choose Project' }}  
                                     </a>
                                 </div>
