--- a/resources/views/guest/index.edge
+++ b/resources/views/guest/index.edge
@@ -115,7 +115,7 @@ Nigeria's #1 Digital Property Platform
             <div class="rounded-bottom btn btn-{{ project.SoldStatusObj.class}} text-center pt-3">
               <ul class="list-unstyled list-inline font-small">
                 <li class="list-inline-item pr-1 "> <b> <i class="fa fa-recycle pr-1" ></i> {{{ moneyFormat(project.annum_return) }}}</b><span class="small">/annum</span></li>
-                <li class="list-inline-item pr-1 "><i class="fa fa-hourglass-half pr-1 "></i><b>{{ project.duration }}</b> years</a></li>
+                <li class="list-inline-item pr-1 "><i class="fa fa-hourglass-half pr-1 "></i><b>{{ project.duration }}</b> yrs</a></li>
                 <li class="list-inline-item pr-1"><i class="fa fa-users pr-1 "></i>{{ project.slots }} </a></li>
               </ul>
             </div>
@@ -264,7 +264,7 @@ Nigeria's #1 Digital Property Platform
 					@endeach
         </div>
       </div>
-      <div class="col-md-12 text-center mt-5">
+      <div class="col-md-12 text-center my-5">
         <a class="btn tnav4 waves-effect text-white " href="/faq" role="button"><b>Any Further Questions?</b></a>
       </div>
     </div>
