--- a/resources/views/includes/admin_navigation.edge
+++ b/resources/views/includes/admin_navigation.edge
@@ -54,6 +54,12 @@
   </a>
 </li>
 <li class="nk-menu-item">
+  <a href="{{ route('admin.notifications.index') }}" class="nk-menu-link">
+      <span class="nk-menu-icon"><em class="icon ni ni-dashlite"></em></span>
+      <span class="nk-menu-text">Notifications</span>
+  </a>
+</li>
+<li class="nk-menu-item">
   <a href="{{ route('admin.announcements.index') }}" class="nk-menu-link">
       <span class="nk-menu-icon"><em class="icon ni ni-dashlite"></em></span>
       <span class="nk-menu-text">Announcements</span>
