--- a/resources/views/guest/index.edge
+++ b/resources/views/guest/index.edge
@@ -116,14 +116,13 @@ Nigeria's #1 Digital Property Platform
               <ul class="list-unstyled list-inline font-small">
                 <li class="list-inline-item pr-1 "> 
                     <b> <i class="fa fa-recycle pr-1" ></i>{{{ moneyFormat(project.annum_return) }}}</b>
-                    <span class="small">/annum  <strong>|</strong></span>
+                    <span class="small">/annum</span>
                 </li>
                 <li class="list-inline-item pr-1 ">
-                    <i class="fa fa-hourglass-half pr-1 "></i><b>{{ project.duration }}</b> yrs  |
+                    <i class="fa fa-hourglass-half pr-1 "></i><b>{{ project.duration }}</b> yrs
                 </li>
                 <li class="list-inline-item pr-1">
-                  <i class="fa fa-users pr-1 "></i>
-                  {{ project.slots }}<span class="font-selling text-white" > left</span>
+                  <i class="fa fa-home pr-1 "></i>{{ project.slots }}
                 </li>
               </ul>
             </div>
